--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,17 @@
 
 # dependencies
 /node_modules
-/.pnp
 .pnp.*
 .yarn/*
+!.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
+!.yarn/sdks
 !.yarn/versions
+
+# IDE
+*.idea
 
 # testing
 /coverage
