env: 커밋 시 불필요한 scope(custom) 제거

--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "tailwindcss": "^4"
   },
   "config": {
-    "commitizen": {
-      "path": "cz-customizable"
-    }
+  "commitizen": {
+    "path": "cz-customizable"
   },
+  "cz-customizable": {
+    "config": ".cz-config.js"
+  }
+},
   "packageManager": "yarn@4.9.1"
 }
