env: commitizen 설정 (#5)
* env(custom): commitizen 설정

* env(custom): commitizen 설정 변경

* env(custom): commitizen 설정 변경

* env(custom): package.json 수정

* env(custom): devDependencies 수정

* env(custom): devDependencies 수정

* env(custom): yarn.lock conflict를 해결한다

* env(custom): 커밋 시 불필요한 scope(custom) 제거

* env: 커밋 시 불필요한 scope(custom) 제거

* env: 변경된 package에 맞게 yarn.lock 파일을 업데이트한다

---------

Co-authored-by: HaJunRyu <hjr4557@naver.com>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "15.3.1",
@@ -20,6 +21,9 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^7.4.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "15.3.1",
@@ -29,9 +33,18 @@
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-config.js"
+    }
   },
   "packageManager": "yarn@4.9.1"
 }
