--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "**/*.{js,ts,jsx,tsx}": [
+      "next lint --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "next": "15.3.1",
     "react": "^19.0.0",
@@ -34,6 +40,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
