env: commit시 lint-staged와 husky로 eslint 실행 자동화

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.{js,ts,jsx,tsx}": [
-      "next lint --fix",
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
       "git add"
     ]
   },
