env: packageManager를 yarn만을 사용하도록 강제한다

--- a/package.json
+++ b/package.json
@@ -53,5 +53,11 @@
       "config": ".cz-config.js"
     }
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "engines": {
+    "node": "^22.x",
+    "npm": "please-use-yarn",
+    "pnpm": "please-use-yarn",
+    "yarn": "^1.22.x"
+  }
 }
