--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "next": "15.3.1",
     "react": "^19.0.0",
