feat: document 사용을 위한 ESLint browser env 설정 및 ModalPortal 컴포넌트 구현

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "root": true,
+  "env": {
+    "browser": true
+  },
   "extends": ["airbnb", "airbnb/hooks", "prettier", "plugin:prettier/recommended"],
   "plugins": ["@typescript-eslint", "import", "react", "react-hooks"],
   "parser": "@typescript-eslint/parser",
