--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
     "react/no-array-index-key": "off",
     "react/jsx-filename-extension": "off",
     "no-use-before-define": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-unused-vars": "error"
   },
   "ignorePatterns": ["node_modules/"]
 }
