--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "semi": true,
   "jsxSingleQuote": true,
   "arrowParens": "always",
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
