--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "15.3.1",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-better-tailwindcss": "^3.4.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.6",
