env: tailwind에 등록되지 않은 클래스 허용
* 커스텀 클래스가 lint로 인해 commit이 되지 않는 이슈 해결

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,8 @@
     "react/no-array-index-key": "off",
     "react/jsx-filename-extension": "off",
     "no-use-before-define": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "better-tailwindcss/no-unregistered-classes": "off"
   },
   "ignorePatterns": ["node_modules/"]
 }
