--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,13 @@
 {
   "root": true,
-  "extends": ["airbnb", "airbnb/hooks", "prettier", "plugin:prettier/recommended"],
-  "plugins": ["@typescript-eslint", "import", "react", "react-hooks"],
+  "extends": [
+    "airbnb",
+    "airbnb/hooks",
+    "prettier",
+    "plugin:prettier/recommended",
+    "plugin:better-tailwindcss/recommended"
+  ],
+  "plugins": ["@typescript-eslint", "import", "react", "react-hooks", "better-tailwindcss"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -49,7 +55,8 @@
     "react/no-array-index-key": "off",
     "react/jsx-filename-extension": "off",
     "no-use-before-define": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "better-tailwindcss/no-unregistered-classes": "off"
   },
   "ignorePatterns": ["node_modules/"]
 }
