env: 버튼 type에 대한 lint 제거
* 재사용 가능한 button 위함. (default 값으로 type 고정)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,8 @@
     "react/jsx-filename-extension": "off",
     "no-use-before-define": "off",
     "react/react-in-jsx-scope": "off",
-    "better-tailwindcss/no-unregistered-classes": "off"
+    "better-tailwindcss/no-unregistered-classes": "off",
+    "react/button-has-type": "off"
   },
   "ignorePatterns": ["node_modules/"]
 }
