refactor: button default type submit으로 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,8 +56,7 @@
     "react/jsx-filename-extension": "off",
     "no-use-before-define": "off",
     "react/react-in-jsx-scope": "off",
-    "better-tailwindcss/no-unregistered-classes": "off",
-    "react/button-has-type": "off"
+    "better-tailwindcss/no-unregistered-classes": "off"
   },
   "ignorePatterns": ["node_modules/"]
 }
