--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
     "no-use-before-define": "off",
     "react/react-in-jsx-scope": "off",
     "better-tailwindcss/no-unregistered-classes": "off",
+    "better-tailwindcss/enforce-consistent-line-wrapping": "off",
     "react/button-has-type": "off",
     "@typescript-eslint/no-unused-vars": "error"
   },
