--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mash-up-web-toolkit/command": "^0.0.15",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/gtag.js": "^0.0.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
