--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
+    "msw": "^2.10.5",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
@@ -74,5 +75,10 @@
     "npm": "please-use-yarn",
     "pnpm": "please-use-yarn",
     "yarn": "^1.22.x"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
