--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,9 +45,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": [
-          "**/mocks/**"
-        ]
+        "devDependencies": ["**/mocks/**"]
       }
     ],
     "react/jsx-curly-brace-presence": ["warn", { "props": "always", "children": "always" }],
@@ -74,5 +72,5 @@
     "class-methods-use-this": "off",
     "react/jsx-no-useless-fragment": "off"
   },
-  "ignorePatterns": ["node_modules/"]
+  "ignorePatterns": ["node_modules/", "public/mockServiceWorker.js"]
 }
