--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "shadcn": "^2.8.0",
     "tailwind-merge": "^3.3.1"
   },
@@ -34,6 +35,7 @@
     "@mash-up-web-toolkit/command": "^0.0.15",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/gtag.js": "^0.0.20",
     "@types/node": "^20",
     "@types/react": "^19",
